# empty-cxx

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  .version.cmake  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  build.sh  doxygen.css  graph_legend.html  index.html  main.cc  navtreedata.js
.github/workflows/: cmake-simple.yml  cmake.yml  documentation.yml  macos.yml  pre-commit.yml  ubuntu.yml  windows.yml
ci/: -2-CMakePresets.json  -CMakePresets.json  readme.md
ci/default-presets/: CMakePresets.json
docs/: CMakeLists.txt  README.md  cmake-help.md  customdoxygen.css  empty-cxx.in.doxygen  footer.html  header.html
search/: all_0.js  pages_0.js  search.css
tools/: run-clang-format.py
